objects/OpportunityLineItemSchedule__c.object
<CustomObject>
    <description>SFDC1-2043 Object to schedule opportunity products in case of multi-year opportunities</description>
    <fields>
        <fullName>AnnualizedDiscountAmount__c</fullName>
        <description>SFDC1-7082 Annualized discount amount calculated for subscription products</description>
        <inlineHelpText>Annualized discount amount auto-calculated by system</inlineHelpText>
        <label>Annualized Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnualizedDiscountPercent__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SFDC-400 percentage of discount annualized for Pro-ration</description>
        <label>Annualized Discount Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AnnualizedTotalAmount__c</fullName>
        <description>SFDC1-7082 Annualized total amount calculated for subscription products</description>
        <formula>(AnnualizedUnitPrice__c -  AnnualizedDiscountAmount__c ) *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Annualized total amount calculated for Subscription products</inlineHelpText>
        <label>Annualized Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnualizedUnitPrice__c</fullName>
        <description>SFDC1-7082 Annualized unit price calculated for subscription product</description>
        <inlineHelpText>Annualized unit price auto-calculated by system</inlineHelpText>
        <label>Annualized Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AutoRenewal__c</fullName>
        <description>SFDC - 3187 formula field to check if related opportunity is auto renewal or not</description>
        <formula>Opportunity__r.AutoRenewal__c</formula>
        <label>Auto Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiscountAmount__c</fullName>
        <description>SFDC1-1837 Amount of discount if discount type = Amount</description>
        <inlineHelpText>Amount of discount given</inlineHelpText>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DiscountPercent__c</fullName>
        <description>SFDC1-1837 percentage of discount if discount type = Percentage</description>
        <label>Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DiscountType__c</fullName>
        <description>SFDC1-1837 Type of discount being applied to the Product</description>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>No Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalListPrice__c</fullName>
        <description>SFDC1-1837 List price entered manually or in Markit&apos;s case = Price book list price</description>
        <inlineHelpText>Updated List Price</inlineHelpText>
        <label>Updated List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InstallmentYear__c</fullName>
        <description>SFDC1-1837 Field to fetch installment year from Product Schedule</description>
        <formula>ProductSchedule__r.InstallmentYear__c</formula>
        <label>zzzInstallment Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstallmentYears__c</fullName>
        <description>SFDC1-1837 To store year of schedule of Opportunity product fetched from Product Schedule</description>
        <label>Installment Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7046: Legacy ID Unique field is a concatenation of the source system name and a source system record id to ensure record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field store the concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-7046: Legacy ID field is the system id (unfriendly) referencing the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the system id (unfriendly) referencing the source record and is populated via migrating system</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <description>https://ihsmarkitcrm.atlassian.net/wiki/spaces/SIPI/pages/799997961/POLK+PROD+Changes</description>
        <externalId>true</externalId>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7046: Legacy System field is a picklist that represents the original system the record came from.</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ListPrice__c</fullName>
        <description>SFDC1-2043 List price derived from related Product schedule</description>
        <formula>TEXT(ProductSchedule__r.ListPrice__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>List Price of Product</inlineHelpText>
        <label>List Price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityProductID__c</fullName>
        <description>SFDC1-2043 Opportunity product to relate OPS with related opportunity product line item.</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of related Opportunity Product</inlineHelpText>
        <label>Opportunity Product ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityProductScheduleKey__c</fullName>
        <description>SFDC1-2043 Unique key for Opportunity Product schedule. Combination of related Product Schedule + Related Oppy + Year of schedule</description>
        <inlineHelpText>Unique Identifier</inlineHelpText>
        <label>Opportunity Product Schedule Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-2043 Related opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Product Schedules</relationshipLabel>
        <relationshipName>OpportunityProductSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OriginatingContract__c</fullName>
        <description>SFDC-3187 lookup field to refer originating contract</description>
        <formula>CaseSafeId(Opportunity__r.ContractBeingRenewed__c )</formula>
        <label>Originating Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKIDOppLineSch__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>OLS{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID OppLineSch</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PriceBookListPrice__c</fullName>
        <description>SFDC1-1837 The list price populated from the Product schedule record</description>
        <inlineHelpText>List price of product from Product Schedules</inlineHelpText>
        <label>Price Book List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriceChangeOnly__c</fullName>
        <description>SFDC-3187 formula field to check if opportunity if price change only</description>
        <formula>Opportunity__r.PriceChangeOnly__c</formula>
        <label>Price Change Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProRatedDiscountAmount__c</fullName>
        <description>SFDC1-7082 pro rated discount amount</description>
        <inlineHelpText>Pro rated discount amount calculated for subscription products</inlineHelpText>
        <label>Pro-Rated Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProRatedTotalAmount__c</fullName>
        <description>SFDC1-7082 Pro rated total amount calculated automatically</description>
        <formula>( ProRatedUnitPrice__c -  ProRatedDiscountAmount__c )* Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pro-rated total amount auto-calculated by system</inlineHelpText>
        <label>Pro-Rated Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProRatedUnitPrice__c</fullName>
        <description>SFDC1-7082 Pro rated unit price to calculated based on product type</description>
        <inlineHelpText>Pro rated unit price calculated for subscription products</inlineHelpText>
        <label>Pro-Rated Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-2043 related product schedule</description>
        <label>Product Schedule</label>
        <referenceTo>ProductSchedule__c</referenceTo>
        <relationshipLabel>Opportunity Product Schedules</relationshipLabel>
        <relationshipName>OpportunityProductSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-1843 Product related to Opportunity product schedule</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Product Schedules</relationshipLabel>
        <relationshipName>OpportunityProductSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>SFDC1-1837 Redundant field to capture all info in OPS.</description>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesPrice__c</fullName>
        <description>SFDC1-1843 Sales price of the product on which product is being sold</description>
        <label>Net Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>SFDC1-487 Ghost status field to store status of related opportunity product</description>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <description>SFDC1-1843 Total price of the producte. (External List Price - Discount) * qty</description>
        <inlineHelpText>Total Sales Price</inlineHelpText>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Opportunity Product Schedule</label>
    <nameField>
        <displayFormat>OPS-{0000000}</displayFormat>
        <label>Opportunity Product Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Product Schedules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>